# TYPEPULSE

./: Cargo.toml  LICENSE  README.md  install.sh  setup_typepulse_home.py
src/: analysis.rs  call_graph.rs  context.rs  graph.rs  ir.rs  iter.rs  lib.rs  log.rs  macros.rs  paths.rs  prelude.rs  report.rs  utils.rs  visitor.rs
src/analysis/: broken_bitpatterns.rs  broken_layout.rs  uninit_exposure.rs
tests/bl1/: Cargo.toml
tests/bl1/src/: main.rs
tests/bl2/: Cargo.toml
tests/bl2/src/: lib.rs
tests/bl3/invalid_discriminant/: Cargo.toml
tests/bl3/invalid_discriminant/src/: main.rs
tests/bl3/mono/src/: main.rs
tests/test_typeII/trait_conv/: Cargo.toml
tests/test_typeII/trait_conv/src/: lib.rs
tests/utility/: rumorph_paths_discovery.rs
