[package]
name = "typepulse"
version = "0.1.0"
authors = ["xxx <xxx>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "typepulse"
test = false
doctest = false

[[bin]]
name = "cargo-typepulse"
test = false
doctest = false

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
once_cell = "1.5.2"
parking_lot = "0.11"
termcolor = "1.1.2"
toml = "0.5.6"
fern = "0.6.0"
chrono = "0.4"
dashmap = "3.11"
snafu = "0.6"
wait-timeout = "0.2"
cargo_metadata = "0.11"
rustc_version = "0.2.3"
bitflags = "1.2.1"
if_chain = "1.0"
maplit = "1.0.2"
which = "3.1"
